trunk/Archive2/4d/3b74ca6f043e45/output
main.cpp: In function 'int main()':
main.cpp:35:21: error: invalid initialization of non-const reference of type 'Widget&' from an rvalue of type 'std::tuple_element<0ul, std::tuple<Widget, Widget> >::type {aka Widget}'
 auto &l  = foo(list );
                     ^
main.cpp:35:7: warning: unused variable 'l' [-Wunused-variable]
 auto &l  = foo(list );
       ^
